--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<app-header></app-header>
+<ng-container *ngIf="mostrarLayout()">
+  <app-header></app-header>
+</ng-container>
 
 <main class="main-content">
   <router-outlet></router-outlet>
 </main>
 
-<app-footer></app-footer>
+<ng-container *ngIf="mostrarLayout()">
+  <app-footer></app-footer>
+</ng-container>
